# protein-translate

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
benches/: bench.rs  big.txt  test_seq.txt
examples/: minimal.rs
src/: lib.rs
tests/: generate_test_data.py  test_data.csv  validate.rs
