[package]
name = "protein-translate"
version = "0.1.0"
authors = ["dweb0"]
description = "Translate nucleotide sequence to protein."
homepage = "https://github.com/dweb0/protein-translate"
repository = "https://github.com/dweb0/protein-translate"
readme = "README.md"
keywords = ["bioinformatics", "translate", "dna", "rna", "protein"]
categories = ["algorithms", "science"]
license = "MIT/Apache-2.0"
edition = "2018"

[badges]
travis-ci = { repository = "dweb0/protein-translate" }


[dependencies]


[dev-dependencies]
criterion = "0.2.11"
lazy_static = "1.3.0"
phf = { version = "0.7.24", features = ["macros"] }
csv = "1.1"

[[bench]]
name = "bench"
harness = false
